# capstone

./: .gitattributes  .gitignore  Dockerfile  back.py  compose.yml  docker-compose.yml  pcap.py  pyproject.toml  pyvenv.cfg  requirements.txt  server.py  test.py  test2.py  winp.py
Scripts/: activate  activate.bat
myproject/: db.sqlite3  manage.py  migrate.sh  protocol
myproject/config/: settings.py  urls.py
myproject/log/: log.txt
myproject/myapp/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
myproject/myapp/migrations/: 0001_initial.py  0002_initial_data.py  0002_protocol.py  0003_protocolpacketcount.py  0003_rename_protocol_protocolinfo_protocol_id.py  0004_protocolcount_delete_protocolpacketcount.py  0004_rename_destination_ip_protocolinfo_target_ip.py  0005_remove_protocolcount_protocol_name_and_more.py  0006_delete_protocolcount.py  0007_protocolcount_rename_pro_info_protocol_pro_info_and_more.py  0008_item.py  0009_delete_protocol_delete_protocolcount_and_more.py  0010_packet_protocolinfo.py  0011_alter_item_name.py  0012_rename_name_item_type.py  0013_rename_type_item_protocol_name.py  0014_delete_packet_remove_item_src_item_dest_ip_and_more.py  (+1 more)
myproject/server/: cap.py  counts.py  packet_log.txt  rules.py  server.py
myproject/static/: ex.css  graph.css  main.css
myproject/static/css/: main.css  (+2 more)
myproject/templates/: admin.html  db.php  graph.html  login.html  main.html  regex.html  test.html
server/: cap.py  config.py  counts.py  edge.py  env.py  handlers.py  ip_counts.py  packet_log.txt  pcap.py  router.py  rules.py  utils.py
(+12 files in other folders)
