[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
cap = "^0.1.4"
django = "^5.0.6"
scapy = "^2.5.0"
keyboard = "^0.13.5"
psutil = "^5.9.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
